--- a/src/split_fastqcats/pipeline_fl_rna/pipeline.yml
+++ b/src/split_fastqcats/pipeline_fl_rna/pipeline.yml
@@ -5,8 +5,8 @@
 # Copyright statement
 copyright: cribbslab (2021)
 
-FP: "AAGCAGTGGTATCAACGCAGAGTGAAT"
-RP: "GTACTCTGCGTTGATACCACTGCTT"
+FP: AAGCAGTGGTATCAACGCAGAGTGAAT
+RP: GTACTCTGCGTTGATACCACTGCTT
 
 indexes:
   - AAATTTGGGCCC
@@ -22,7 +22,9 @@ indexes:
   - GGGCCCGGGCCC
   - CCCTTTCCCTTT
 
-split: 400000
+## edit distance for primer matching
+error: 0.3
+split: 4000000
 
 job_options: -t 18:00:00
 
